--- a/source code/register.html
+++ b/source code/register.html
@@ -23,7 +23,7 @@
     <!-- Header Section -->
     <header>
         <nav class="navbar">
-          <img src="logo.png" alt="logo picture with one word" class="logo"/>
+          <img src="logo.PNG" alt="logo picture with one word" class="logo"/>
           <div class="nav-list">
             <ul>
               <li><a href="#">Home</a></li>
